Fix the stale DOM bug for a11y mobile-friendly pages

https://crrev.com/c/688035 accidentally made calls to
reset a11y mode when disabling WebContentsAccessibility
state. This CL prevents it to fix the stale DOM issue
reported in a11y mobile-friendly pages (and maybe in others).

Bug: 775532
Change-Id: I69cffa7a10c5fd466941faa12ee121b5be2a746e